# GIS

./: .gitignore  CMakeLists.txt  GIS.sln  README.md  config.ini
GIS_Algs/: CMakeLists.txt  GIS_Algs.vcxproj  GIS_Algs.vcxproj.filters
GIS_Algs/include/: BruteForce.h  MaxMatching.h  SubGraphIso.h  TruncEnum.h
GIS_Algs/src/: BruteForce.cpp  MaxMatching.cpp  SubGraphIso.cpp  TruncEnum.cpp  pch.h
GIS_Core/: CMakeLists.txt  GIS_Core.cpp  GIS_Core.vcxproj  GIS_Core.vcxproj.filters
GIS_Core/include/: Benchmark.h  ValidateMatch.h  pch.h
GIS_Core/src/: Benchmark.cpp  GIS_Core.cpp  ValidateMatch.cpp  main.cpp  pch.h
GIS_Data/: CMakeLists.txt  Config.cpp  GIS_Data.vcxproj  GIS_Data.vcxproj.filters  Graph.cpp
GIS_Data/include/: BipartGraph.h  Config.h  Element.h  Graph.h  GraphPair.h  KoenigGraph.h  Subcircuit.h
GIS_Data/src/: BipartGraph.cpp  Config.cpp  Element.cpp  Graph.cpp  GraphPair.cpp  KoenigGraph.cpp  pch.h
GIS_Generator/: CMakeLists.txt  GIS_Generator.vcxproj  GIS_Generator.vcxproj.filters
GIS_Generator/include/: Generator.h
GIS_Generator/src/: Generator.cpp  pch.h
GIS_Parser/: CMakeLists.txt  GIS_Parser.vcxproj  GIS_Parser.vcxproj.filters  GraphParser.cpp
GIS_Parser/include/: CircuitLayout.h  ConfigParser.h  FileWriter.h  GraphParser.h  HyperGraphToGraph.h  HyperGtaphToGraph.h  SpiceParser.h  Utils.hxx
GIS_Parser/src/: CircuitLayout.cpp  ConfigParser.cpp  FileWriter.cpp  GraphParser.cpp  HyperGraphToGraph.cpp  HyperGtaphToGraph.cpp  SpiceParser.cpp  Utils.cxx  pch.h
GIS_Stats/: CMakeLists.txt  GIS_stats.vcxproj  GIS_stats.vcxproj.filters  Statistics.cpp
GIS_Stats/include/: Statistics.h
GIS_Stats/src/: Statistics.cpp  pch.h
GIS_Tests/: CMakeLists.txt  GIS_Tests.vcxproj
GIS_Tests/Graph_Data/: NotIsoGraph1.graph
GIS_Tests/src/: BaseTests.cpp  BruteForceTests.cpp  TruncEnumTests.cpp  test.cpp
GIS_Tests/tests/: MaxMatching.cpp
Graph_Data/: inputGraph1.graph  inputGraph2.graph  inputGraph3.graph  output.stats
Graph_Data/HyperG/: dataFormat.hgraph  inputGraph1.hgraph  inputGraph2.hgraph  inputGraph3.hgraph  inputGraph4.hgraph
Graph_Data/netlist/netlist1/: netlist.net  Топология_нетлист.sp
Graph_Data/netlist/netlist2/: netlist.net  Топология_нетлист_2.sp
Graph_Data/netlist/netlist3/: netlist.sp
